--- a/gb/21/5/27/n12980801.md
+++ b/gb/21/5/27/n12980801.md
@@ -1,20 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fbacqn3783/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fbacqn3783/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fbacqn3783/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fbacqn3783/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fbacqn3783/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fbacqn3783/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新闻看点】美参议院四箭齐发 助推抗击中共</h2>
-<a href="https://git.io/JGmZg"><img width="600" src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fbacqn3783/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
-<h6>参议院四箭齐发，助推抗击中共。（大纪元合成）
-</h6>
+<a href="https://dn3dhcszbgs9s.cloudfront.net/L5k9f73Jl"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
-	<p>【大纪元2021年05月28日讯】大家好，欢迎大家关注《<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》，我是李沐阳。今天是美东时间5月27日星期四，亚洲时间是5月28日星期五。</p>
-<p>今日焦点：美中通话通报模糊，前景更复杂？白宫定调美中关系，<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E5%8F%82%E8%AE%AE%E9%99%A2.md#1">参议院</a>四箭齐发；毒源解密有望，福西下课倒计时；广州24小时全员核酸，非洲<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92.md#1">病毒</a>笼罩省委军区；加油台湾；《真实中国》画展欣赏。</p>
+	<p>【大纪元2021年05月28日讯】大家好，欢迎大家关注《<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》，我是李沐阳。今天是美东时间5月27日星期四，亚洲时间是5月28日星期五。</p>
+<p>今日焦点：美中通话通报模糊，前景更复杂？白宫定调美中关系，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%8F%82%E8%AE%AE%E9%99%A2.md#1">参议院</a>四箭齐发；毒源解密有望，福西下课倒计时；广州24小时全员核酸，非洲<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92.md#1">病毒</a>笼罩省委军区；加油台湾；《真实中国》画展欣赏。</p>
 <p>世界卫生组织要推迟至6月再决定，是否批准紧急使用科兴疫苗。《华尔街日报》报导，世卫正要求科兴公司提供疫苗更多安全及生产流程数据。</p>
 <p>因质疑中共有关中印边境阵亡士兵说法而遭中共当局跨境“追逃”的19岁重庆青年王靖渝，在阿联酋被抓近二个月后，27日已经获释并抵达土耳其，估计28日可以赴美。不过在关键时刻亲赴阿联酋营救他的女友，却在与阿联酋警察与中使馆官员见面后失联。</p>
-<p>脸书表示，不再封锁中共<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92.md#1">病毒</a>（武汉病毒、新冠病毒）可能是武汉实验室泄漏的言论。在白宫宣布不排除实验室来源的说法后，脸书的审查政策出现了大转弯。PTT创办人杜奕瑾表示，这直接反映了脸书对言论不当审查的问题。</p>
+<p>脸书表示，不再封锁中共<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%97%85%E6%AF%92.md#1">病毒</a>（武汉病毒、新冠病毒）可能是武汉实验室泄漏的言论。在白宫宣布不排除实验室来源的说法后，脸书的审查政策出现了大转弯。PTT创办人杜奕瑾表示，这直接反映了脸书对言论不当审查的问题。</p>
 <p>尼泊尔圣母峰基地营官员27日表示，44岁的香港登山客曾燕红刷新了女性最快攻顶纪录。她在25小时50分钟内，登上了海拔8,848.86米的山顶。</p>
 <p>截止到美东时间5月27日下午3点，全球新增确诊中共病毒人数57万2,171人，总确诊人数达到了1亿6,940万4,850人，死亡总数是351万8,899人。</p>
 <p>下面进入今天的话题。</p>
-<p><center><a title="YouTube video player" src=""></a><a href="https://git.io/JGmZg"><img width="600" src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fbacqn3783/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/t-goUU5RjSU" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<p><center><a src=""></a><a href="https://dn3dhcszbgs9s.cloudfront.net/L5k9f73Jl"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/9cc1cd06-ce76-482b-b133-61a668fa0bd8?r=16x9&amp;d=1865" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>戴琪刘鹤首度通话 双方通报模糊</h2>
 <p>昨天（26日）晚上，美国贸易代表戴琪与中共副总理刘鹤进行了第一次通话，双方都表示，未来会继续沟通。不过从双方公告情况看，除了都提到进行了“坦诚交流”外，说得都比较笼统，并没有多少交集。</p>
 <p>这次中方抢先一步，公告了美中通话情况。表示“双方认为发展双边贸易非常重要，并就彼此关心的问题交换了意见，同意继续保持沟通”。</p>
@@ -39,15 +38,15 @@
 <p>中共外交部首席战狼赵立坚表示，美中“合则两利，斗则俱伤”。美中难免存在一些竞争，但用竞争来定义或主导中美关系是错误的，只会导致对抗、冲突。</p>
 <p>赵立坚表示，美中“即使竞争也应该是良性的”，而不是“你输我赢，你死我活的恶性竞争”。他呼吁美方摒弃“冷战零和思维”，“加强对话、管控分歧”，推动美中关系“健康稳定”发展。</p>
 <p>首席战狼的措辞，已经没有了往日咄咄逼人的狼性，更多是在强调“合作”。但是已经于事无补了，中共战狼式外交和对世界的威胁，美国和国际社会已经无法视而不见了。</p>
-<h2><ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E5%8F%82%E8%AE%AE%E9%99%A2.md#1">参议院</a>四箭齐发 助推抗击中共</h2>
-<p>昨天（26日），美国参议院连续推出四项抗共法案。第一个是要加强与中共的竞争，第二个是要审查来自中国的捐赠，第三个是要求拜登解密<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>起源的相关情报，第四个是禁止向武汉病毒所提供资助的修正案。</p>
+<h2><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%8F%82%E8%AE%AE%E9%99%A2.md#1">参议院</a>四箭齐发 助推抗击中共</h2>
+<p>昨天（26日），美国参议院连续推出四项抗共法案。第一个是要加强与中共的竞争，第二个是要审查来自中国的捐赠，第三个是要求拜登解密<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>起源的相关情报，第四个是禁止向武汉病毒所提供资助的修正案。</p>
 <p>民主党领袖舒默表示，将推动迅速通过《美国创新与竞争法》，拨出数百亿美元，提高在工业和技术领域与中共的竞争。舒默计划本周末对法案进行表决，希望这项立法可以保证美国在未来几年、甚至几代人中占据竞争优势。</p>
 <p>这个法案，其实就是在上周一压倒性通过的《无尽边境法》。其中关键部分是要解决给汽车生产带来障碍的半导体短缺情况，以及在一些技术领域落后于竞争对手中共的问题。</p>
 <p>第二项法案是共和党参议员里施、卢比奥和民主党参议员梅嫩德斯与卡丁联合提出的。法案要求对中方给美国大学的主要赠款或合同进行国家安全审查，要求联邦政府的美国外国投资委员会审查价值超过100万美元的中国赠款与合同。</p>
 <p>这项内容广泛的法案是专门针对中共的，最快将在本周表决。路透社表示，中国派往美国大学学习的学生比任何国家都多，而且美国大学的最大外国捐款，从2014年以来，中方的捐款超过了10亿美元。</p>
 <p>这两项法案，重点是围绕美中科技竞争和阻止中共窃取美国技术等方面。在已有的基础上，这两项法案无疑将推进对抗中共的程度。</p>
 <h2>90天内解密毒源？拜登令提交报告</h2>
-<p>第三项和第四项法案，都与目前肆虐全球的中共病毒<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>有关。其中第三项法案要求，拜登政府要在90天内解密中共病毒来源的情报，得到了两党议员的一致支持。</p>
+<p>第三项和第四项法案，都与目前肆虐全球的中共病毒<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>有关。其中第三项法案要求，拜登政府要在90天内解密中共病毒来源的情报，得到了两党议员的一致支持。</p>
 <p>发起人之一、共和党参议员乔什?霍利表示，这场大流行严重损害了美国和整个世界。“美国人民应该知道中共病毒的起源”，“应该知道大流行是如何开始的，中国（中共）扮演了什么角色。”</p>
 <p>情报委员会首席共和党议员卢比奥告诉美国之音，他自始至终都认为，在病毒溯源问题上不能排除任何一种说法，包括武汉病毒所病毒外泄的可能性。</p>
 <p>上周三（19日），众议院情报委员会首席共和党成员努涅斯在报告中说，有“重大旁证”表明，2019冠状病毒爆发是武汉病毒所的一次泄漏造成的。</p>
@@ -99,7 +98,7 @@
 <h2>台湾囝仔：加油印度！加油台湾！</h2>
 <p>再来关注台湾的疫情。疫情指挥中心宣布，今天（27日）新增了671例中共病毒患者。其中本土病例401例，境外移入4例，校正回归个案266例。另外新增死亡13例。</p>
 <p>台湾的疫情持续紧张，牵动着所有关心台湾人的心，为此我们也举办了一个“为台湾加油”的活动。我们向大家征集正面力量，向台湾送上祝福，向一线抗疫人员表达感恩。</p>
-<p>大家可以把祝福浓缩到100字以内，写成旧体诗或正体诗，然后发给到《<ahref="https://github.com/fbacqn3783/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》的另一个邮箱：newsinsight00@gmail.com。我们会挑选10篇在节目中跟大家分享，其余的会精选后，上传到优乐客网站。优乐客网站每天都有更新，欢迎大家到新家去坐坐。</p>
+<p>大家可以把祝福浓缩到100字以内，写成旧体诗或正体诗，然后发给到《<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》的另一个邮箱：newsinsight00@gmail.com。我们会挑选10篇在节目中跟大家分享，其余的会精选后，上传到优乐客网站。优乐客网站每天都有更新，欢迎大家到新家去坐坐。</p>
 <p>今天，我要送给大家一个特别的内容。不知道大家是否记得，在去年4月18日，我在节目中送给大家一首原创MV，是台湾囝仔创作的。MV的名字叫“Shame on you W.H.O.”。</p>
 <p>现在我又收到了台湾囝仔的原创作品，不过他们这个乐队现在已经有了一个好听的名字叫“氧气筒”。另外据我了解，他们好像是一家人喔，他们创作的MV叫“Go India?Go Taiwan”，氧气筒要通过这首歌，为印度和台湾加油。</p>
 <p>“氧气筒”在邮件中表示，本来这首歌最初是要为印度加油打气的。没想到台湾的疫情突然急转直下，所以临时做了修改，变成了“印度加油?台湾加油”。</p>
@@ -116,11 +115,14 @@
 <p>谢谢两位朋友带给我们精彩的画作，你们对中共的认知与理解，用画笔呈现出来，会帮助更多的人看清中共的邪恶。这正是我们举办这个活动的目的。</p>
 <p>我们也希望更多的朋友，能够用画笔，从不同角度、不同层面反映真实的中国状况，揭露中共的丑陋与邪恶。画作请寄送到xwkd2017@gmail.com，我们在节目中展示后，将上传到优乐客网站，让这些灭共利器发挥更大的作用。</p>
 <p>******************</p>
+<h2>今日会员： </h2>
 <p>深圳赛格大厦18日到20日连续晃了三天，让更多人开始关注深圳、乃至中国究竟有多少豆腐渣工程。在今天的会员区，将与您分享赛格大厦扭秧歌，会不会出现摩天大楼诅咒？欢迎大家到优乐客会员区了解更多。</p>
-<p>以上就是我们今天的节目内容。如果您喜欢《新闻看点》，请别忘记点赞、订阅，同时帮我们把这个频道转发出去，让更多有缘人看到我们，听到我们的声音。感谢您的帮助与收看，再会。</p>
-<p>加入会员观看独家：https://ept.ms/3wsLpkk<br />
-支持沐阳：https://bit.ly/supportmy<br />
-欢迎订阅 + 按小铃铛 ： https://bit.ly/SubscribeNewsInsight</p>
+<p>以上就是我们今天的节目内容。沐阳会员视频，每日更新，欢迎大家到优乐客会员区了解更多。我们的会员网站的网址是 <ahref="http://muyangshow.com">http://muyangshow.com</a>，还有一个 <ahref="http://youlucky.biz">http://youlucky.biz</a> 。</p>
+<p>以上就是我们今天的节目内容。如果您喜欢《<ahref="http://bit.ly/SubscribeNewsInsight">新闻看点</a>》，请别忘记点赞、订阅，同时帮我们把这个频道转发出去，让更多有缘人看到我们，听到我们的声音。感谢您的帮助与收看，再会。</p>
+<p>加入会员观看独家：<ahref="https://ept.ms/3wsLpkk">https://ept.ms/3wsLpkk</a><br />
+沐阳会员网站：<ahref="http://muyangshow.com">http://muyangshow.com</a><br />
+支持沐阳：<ahref="https://www.youlucky.biz/mu-yang-about">https://www.youlucky.biz/mu-yang-about</a><br />
+欢迎订阅＋按小铃铛：<ahref="https://bit.ly/SubscribeNewsInsight">https://bit.ly/SubscribeNewsInsight</a></p>
 <p>《新闻看点》制作组</p>
 <p>责任编辑：李昊 #</p>
 	
@@ -128,41 +130,35 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/22/n12968714.md#1">【新闻看点】滇青强震400余震 台湾疫情严峻</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/24/n12973037.md#1">【新闻看点】中共炮制台湾假信息 五毛无脑招笑</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/25/n12975114.md#1">【新闻看点】辽宁诡异爆炸 美参议员遭死亡威胁</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/26/n12978036.md#1">【新闻看点】李克强只两条路？俄不抗美北京慌</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/22/n12968714.md#1">【新闻看点】滇青强震400余震 台湾疫情严峻</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/24/n12973037.md#1">【新闻看点】中共炮制台湾假信息 五毛无脑招笑</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/25/n12975114.md#1">【新闻看点】辽宁诡异爆炸 美参议员遭死亡威胁</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/26/n12978036.md#1">【新闻看点】李克强只两条路？俄不抗美北京慌</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232692.md#1" target="_blank">林辉：为延安贩卖鸦片的毒贩死前缘何喊冤？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/8/n11708865.md#1" target="_blank">香港立法会议员胡志伟：很佩服法轮功学员</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/4/n10360803.md#1" target="_blank">共产暴政录：统购统销洗劫中国农民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/15/n4132079.md#1" target="_blank">从唐山义女“探父蒙难”看古今对比</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/20/n12963544.md#1">血月是什么征兆 圣经预言怎么说？</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/24/n12971668.md#1">美军士兵披露绝密任务：与外星人对话（上）</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/25/n12973922.md#1">美军士兵披露绝密任务：与外星人对话（下）</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/22/n12967538.md#1">中华文化有“血月”之说吗  有教人避难之法吗？</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/20/n12964086.md#1">【未解之谜】水往高处流 探秘“神秘点”</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/27/n12980833.md#1">【秦鹏直播】美宣告与中共接触结束 王靖渝获释</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/27/n12980022.md#1">【财商天下】杂交水稻之父 袁隆平的大实话</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/26/n12977277.md#1">【财商天下】赛格“楼晃晃” 晃出更多秘密</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/26/n12976559.md#1">雨下在山区 气象局：台湾中南部7县市大雨特报</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/26/n12978088.md#1">【秦鹏直播】福西一语捅破天 美国中共都乱了</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/25/n12975314.md#1">周三罕见“超级花血月”3种月球现象同现</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/25/n12975106.md#1">被抹黑台湾爆疫情便逃回香港 黄秋生霸气回应</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/27/n12978414.md#1">38岁胡歌近照曝光 消瘦老态惊呆网友</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/24/n12973141.md#1">同行被说沦为洗车工 黄秋生：该价值观很势利</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/26/n12976614.md#1">星野源谈向新垣结衣求婚过程 透露彼此昵称</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/25/n12975521.md#1">被范冰冰事件所累？ 冯小刚赔华谊兄弟逾亿元</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/24/n12972633.md#1">沉默缺氧造成新冠患者猝死增？2类人要警惕</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/25/n12973922.md#1">美军士兵披露绝密任务：与外星人对话（下）</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/26/n12977519.md#1">台湾疫情告急 到底该不该普筛？专家解答</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/25/n12974398.md#1">【重播】警惕！新冠病毒在1个地方 最容易传播</a></li>
-<li><a href="https://github.com/fbacqn3783/djy/blob/master/gb/21/5/26/n12976124.md#1">受益法轮功 折磨婴儿的罕见皮肤病彻底痊愈</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fbacqn3783/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fbacqn3783/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/27/n12980801.htm">【新闻看点】美参议院四箭齐发 助推抗击中共</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/27/n12980801.htm">【新闻看点】美参议院四箭齐发 助推抗击中共</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fbacqn3783/djy/blob/master/gb/21/5/27/n12980801.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fbacqn3783/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fbacqn3783/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fbacqn3783/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fbacqn3783/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fbacqn3783/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/5/27/n12980801.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
