--- a/gb/21/5/26/n12977277.md
+++ b/gb/21/5/26/n12977277.md
@@ -1,15 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/szxhxj3022/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/szxhxj3022/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/szxhxj3022/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/szxhxj3022/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/szxhxj3022/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/szxhxj3022/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/szxhxj3022/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/szxhxj3022/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/szxhxj3022/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/szxhxj3022/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/szxhxj3022/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/szxhxj3022/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/szxhxj3022/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/szxhxj3022/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/szxhxj3022/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/szxhxj3022/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/szxhxj3022/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/szxhxj3022/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/szxhxj3022/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/szxhxj3022/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/szxhxj3022/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/szxhxj3022/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/szxhxj3022/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/szxhxj3022/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【财商天下】赛格“楼晃晃” 晃出更多秘密</h2>
-
+<a href="https://dcz6rimunj42y.cloudfront.net/N8z7nbnKu"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2021年05月26日讯】最近几年，上海一座13层大厦连根栽倒，倒出了一个“楼脆脆”；成都两栋居民楼歪在一起，歪出一个“楼歪歪”；而最近几天深圳赛格上演的“<ahref="https://github.com/szxhxj3022/djy/blob/master/gb/tag/%E6%A5%BC%E6%99%83%E6%99%83.md#1">楼晃晃</a>”更是一晃成名，而且热度持续。我们看到，资本市场是最敏感的，在人们从<ahref="https://github.com/szxhxj3022/djy/blob/master/gb/tag/%E8%B5%9B%E6%A0%BC%E5%A4%A7%E5%8E%A6.md#1">赛格大厦</a>冲出去的第二天，所有跟赛格挂钩的股价都大跌，赛格的二手房，本来是4万一平米，现在也降到了2万一平米。</p>
-<p>对于大楼为什么摇晃，当地政府派出的专家给出了一个初步的报告，大概意思是说，大楼主体结构没有异常，震颤原因是风、地铁运行和温度等多种因素耦合。但是<ahref="https://github.com/szxhxj3022/djy/blob/master/gb/tag/%E8%B5%9B%E6%A0%BC%E5%A4%A7%E5%8E%A6.md#1">赛格大厦</a>偏偏不配合这个官方说法，接下来的几天，尽管风力、温度还是没有异常，也几乎是保持着每天一晃的纪录，就连美国大使馆，也提醒美国公民要远离这个赛格。</p>
+	<p>【大纪元2021年05月26日讯】最近几年，上海一座13层大厦连根栽倒，倒出了一个“楼脆脆”；成都两栋居民楼歪在一起，歪出一个“楼歪歪”；而最近几天深圳赛格上演的“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%A5%BC%E6%99%83%E6%99%83.md#1">楼晃晃</a>”更是一晃成名，而且热度持续。我们看到，资本市场是最敏感的，在人们从<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B5%9B%E6%A0%BC%E5%A4%A7%E5%8E%A6.md#1">赛格大厦</a>冲出去的第二天，所有跟赛格挂钩的股价都大跌，赛格的二手房，本来是4万一平米，现在也降到了2万一平米。</p>
+<p>对于大楼为什么摇晃，当地政府派出的专家给出了一个初步的报告，大概意思是说，大楼主体结构没有异常，震颤原因是风、地铁运行和温度等多种因素耦合。但是<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B5%9B%E6%A0%BC%E5%A4%A7%E5%8E%A6.md#1">赛格大厦</a>偏偏不配合这个官方说法，接下来的几天，尽管风力、温度还是没有异常，也几乎是保持着每天一晃的纪录，就连美国大使馆，也提醒美国公民要远离这个赛格。</p>
 <p>赛格大厦这一晃，不仅晃出了建筑期间的不少隐密问题，也晃出了中共治下的中国特色。</p>
-<p>那我们今天就借着这个话题，来聊一聊中国的摩天大楼，这些高楼的安全性到底怎样？跟<ahref="https://github.com/szxhxj3022/djy/blob/master/gb/tag/%E8%B1%86%E8%85%90%E6%B8%A3.md#1">豆腐渣</a>有没有关系？</p>
-<p><a src="https://www.youmaker.com/embed/1b1b12c3-1ee6-47c9-a9c3-818e35bcf7c1?r=16x9&amp;d=691" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p>那我们今天就借着这个话题，来聊一聊中国的摩天大楼，这些高楼的安全性到底怎样？跟<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B1%86%E8%85%90%E6%B8%A3.md#1">豆腐渣</a>有没有关系？</p>
+<p>"></a><a href="https://dcz6rimunj42y.cloudfront.net/N8z7nbnKu"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/v/o347qRg0K55M<br />
+<a src=""></a><a href="https://dcz6rimunj42y.cloudfront.net/N8z7nbnKu"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/1b44273e-f65f-46e5-ae81-949b076e4e5e?r=16x9&amp;d=683" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>官方给出的解释</h2>
 <p>我们从公开的数据了解到，中国300米以上的建筑有95座，150米以上的建筑更是多到2,300多座。可能很多人了解，在大陆，工程建设是腐败的重灾区，各种偷工减料，缩短工期的花样，可谓是名目繁多。</p>
 <p>那么，这次发生晃动的赛格大厦又出来什么新鲜故事呢？</p>
@@ -27,7 +28,7 @@
 <p>论文中提到，赛格大厦在基础完成后，“进行整个工程总承包商招标时，不能提供完整的施工图纸。但是前期基础部分已投入五千多万，如果停工等图必然造成投入资金的财务成本增大，箭已在弦上，不得不发。于是仓促之间用裙房的部分结构图纸进行项目的总承包招标。”</p>
 <p>“标是招了，总承包单位也确定了下来，可是一步慢，步步慢，施工中经常出现停下来等图和按图施工后又返工修改的现象，引发了很多不必要的纠纷，增大了工程成本。这种边设计边施工的现象一直持续到赛格广场的结构工程施工完成。”</p>
 <p>这个论文，可以说是当年赛格建设时的第一手资料，也多亏有这么一篇论文，能让人很简单的猜测到当时发生了什么。</p>
-<p>八九十年代的大陆，有个最热的词，就是深圳速度，当时，关于“<ahref="https://github.com/szxhxj3022/djy/blob/master/gb/tag/%E4%B8%89%E5%A4%A9%E4%B8%80%E5%B1%82%E6%A5%BC.md#1">三天一层楼</a>”的报导，媒体上随处可见，大家可以想像当年的建设场景，工人们不能没活干，机器不能不开动，赛格大厦还必须得尽快建成，怎么办，那就边设计边施工吧。</p>
+<p>八九十年代的大陆，有个最热的词，就是深圳速度，当时，关于“<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%89%E5%A4%A9%E4%B8%80%E5%B1%82%E6%A5%BC.md#1">三天一层楼</a>”的报导，媒体上随处可见，大家可以想像当年的建设场景，工人们不能没活干，机器不能不开动，赛格大厦还必须得尽快建成，怎么办，那就边设计边施工吧。</p>
 <p>边设计边施工，也叫逆向法，在当时是有支持和反对两种声音的，但是当年深圳政府有向中共这个50年“党妈”献礼的任务，于是选择了逆向法，结果是不但缩短了工期，似乎还节省了花费。</p>
 <p>按一些人的说法，这个边设计边施工是对传统做法的所谓革命。传统上都是先出设计图纸，再经过论证、审批，确认后交给施工部门。对于超高大楼，中间还应该建立模型，对风动、地震等影响做检测，要在调整后，才能投入施工。因为整个施工过程是有阶段性的，各个施工阶段需要有序衔接。</p>
 <p>但是，如果打破了这个建筑秩序，会不会遗漏某些重要环节，会不会留下隐患呢？</p>
@@ -44,7 +45,7 @@
 <p>赛格大楼当时是深圳市政府跨世纪的所谓“献礼”工程，为了赶工期，想了很多办法。边设计边施工是缩短时间的一个办法，采用钢管混凝土也能缩短工期，最终创造了当年标榜的深圳速度。</p>
 <p>网上可以查到混凝土是有凝固期的，在自然风干的情况下，如果达到100%的坚固程度需要大约30到40天。采用钢管混凝土，在把混凝土灌入钢管之后，还需要搅拌均匀、捣实，进行充分排气。如果排气不充分就会形成气泡和间隔，造成混凝土的疏松，降低坚固程度，影响寿命。</p>
 <p>钢管混凝土的施工要求中，建筑物每升高10至20米需要停下来捣实排气，风干后才能再往上盖，不然的话就会有间隙或气泡。</p>
-<p>刚才提到，深圳速度是<ahref="https://github.com/szxhxj3022/djy/blob/master/gb/tag/%E4%B8%89%E5%A4%A9%E4%B8%80%E5%B1%82%E6%A5%BC.md#1">三天一层楼</a>，而根据大陆媒体最新的报导，赛格大厦建设时还曾经创造过2.7天一层的神话般的速度，那么，这样的速度能满足这么繁琐的要求吗？</p>
+<p>刚才提到，深圳速度是<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%89%E5%A4%A9%E4%B8%80%E5%B1%82%E6%A5%BC.md#1">三天一层楼</a>，而根据大陆媒体最新的报导，赛格大厦建设时还曾经创造过2.7天一层的神话般的速度，那么，这样的速度能满足这么繁琐的要求吗？</p>
 <p>我们看到，刚才说的边设计连施工，钢管混凝土，还有这个深圳速度，任何一项都会构成巨大的隐患，如果再加上官方说的“耦合”也好，“共振”也好的说法，那就真有可能是灭顶之灾了。</p>
 <p>这几天，已经有个新消息，中冶一局以17亿的标的拿到了赛格大厦的维修加固工程，网上可以看到，很多车辆现在都在往赛格大厦运送建筑物资，这说明政府也知道光靠官方解释是消除不了民众质疑的，也不能让赛格大厦听话的不摇晃。</p>
 <p>那我们也期待中冶一局能够真正救了赛格大夏！</p>
@@ -53,48 +54,42 @@
 撰文：陶子丰、财商经济研究所<br />
 剪辑：大中<br />
 监制：文静<br />
-<ahref="https://github.com/szxhxj3022/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
+<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
 <p>责任编辑：连书华</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/12/n12943088.md#1">【财商天下】受习近平关照？宁德时代发迹内幕</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/13/n12946935.md#1">【财商天下】惹翻习近平 上海出事了</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/15/n12952746.md#1">【财商天下】脑力赌未来 美团败了？</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/25/n12975557.md#1">【财商天下】比特币兴风作浪 谁是大玩家？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/12/n12943088.md#1">【财商天下】受习近平关照？宁德时代发迹内幕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/13/n12946935.md#1">【财商天下】惹翻习近平 上海出事了</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/15/n12952746.md#1">【财商天下】脑力赌未来 美团败了？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/5/25/n12975557.md#1">【财商天下】比特币兴风作浪 谁是大玩家？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/7/n10464792.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/12/n11583426.md#1" target="_blank">悉尼女律师：修炼让我找到了人生意义</a></li>
-<hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/1/n10446785.md#1" target="_blank">共产暴政录：从船王卢作孚自杀看中共劫财手段</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/28/n4538256.md#1" target="_blank">硅谷工程师修炼法轮功 无病一身轻</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/20/n12962633.md#1">超自然研究者：数千英国人穿越 消失在过去</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/24/n12971668.md#1">美军士兵披露绝密任务：与外星人对话（上）</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/25/n12973922.md#1">美军士兵披露绝密任务：与外星人对话（下）</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/22/n12967538.md#1">中华文化有“血月”之说吗  有教人避难之法吗？</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/20/n12964086.md#1">【未解之谜】水往高处流 探秘“神秘点”</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/26/n12977398.md#1">【大话西油】达芬奇——最有可能的穿越者</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/25/n12975468.md#1">【秦鹏直播】新西兰与中共摊牌？美台爆军事合作</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/26/n12975967.md#1">【拍案惊奇】超级血月受关注 美媒揭中共蝙蝠洞</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/24/n12971456.md#1">台湾14县市大雨特报 其中7县市升级为豪雨</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/24/n12972758.md#1">被问为何继续当演员 舒淇6字回应笑翻全场</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/24/n12972046.md#1">中共官场风声鹤唳 避免提到“那个人”</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/24/n12972758.md#1">被问为何继续当演员 舒淇6字回应笑翻全场</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/25/n12975106.md#1">被抹黑台湾爆疫情便逃回香港 黄秋生霸气回应</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/24/n12973141.md#1">同行被说沦为洗车工 黄秋生：该价值观很势利</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/24/n12972884.md#1">甄珍在香港眩晕摔倒 第二次开颅做手术</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/26/n12976614.md#1">星野源谈向新垣结衣求婚过程 透露彼此昵称</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/24/n12972661.md#1">茶喝错当心副作用 中医：1种茶护肝又养脾胃</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/24/n12972633.md#1">沉默缺氧造成新冠患者猝死增？2类人要警惕</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/24/n12971668.md#1">美军士兵披露绝密任务：与外星人对话（上）</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/25/n12973922.md#1">美军士兵披露绝密任务：与外星人对话（下）</a></li>
-<li><a href="https://github.com/szxhxj3022/djy/blob/master/gb/21/5/24/n12971563.md#1">世界上最小的鸡仅500克重 很会摆姿势</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/szxhxj3022/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/szxhxj3022/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/26/n12977277.htm">【财商天下】赛格“楼晃晃” 晃出更多秘密</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/26/n12977277.htm">【财商天下】赛格“楼晃晃” 晃出更多秘密</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/szxhxj3022/djy/blob/master/gb/21/5/26/n12977277.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/szxhxj3022/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/szxhxj3022/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/szxhxj3022/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/szxhxj3022/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szxhxj3022/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/5/26/n12977277.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
